# nullex

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  ERROR_HANDLING_ANALYSIS.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  bootstrap.toml  build.rs  current_spec.txt  ext2test.img  rust-toolchain.toml  rustfmt.toml  x86_64-unknown-none.json
.cargo/: config.toml
.github/workflows/: ci.yml  makefile.yml  rust-clippy.yml  rust.yml
docs/: REIMPL-x86_64.md
programs/: _start.c
programs/hello/: hello.c
programs/include/: nullex.h
scripts/: setup-dev.ps1  setup-dev.sh  setup-vn.sh
src/: acpi.rs  allocator.rs  apic.rs  constants.rs  error.rs  errors.rs  gdt.rs  gsi.rs  interrupts.rs  ioapic.rs  lib.rs  main.rs  memory.rs  pit.rs  rtc.rs  serial.rs  syscall.rs  vga_buffer.rs
src/allocator/: buddy.rs  bump.rs  fixed_size_block.rs  io_alloc.rs  linked_list.rs
src/arch/: mod.rs
src/arch/x86_64/: addr.rs  boot.asm  grub.cfg  linker.ld  mod.rs  (+5 more)
src/common/: mod.rs  ports.rs
src/config/: ini_parser.rs  mod.rs
src/drivers/: mod.rs
src/fs/: ata.rs  mod.rs  ramfs.rs
src/io/: mod.rs  pci.rs
src/kernel/: Cargo.toml
src/net/: arp.rs  dns.rs  ethernet.rs  http.rs  icmp.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs
src/orchestrator/: Cargo.toml
src/programs/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/user_space/: syscalls.rs
src/userspace/: Cargo.toml  link.ld
src/utils/: align.rs  bits.rs  boot.rs  cpu_utils.rs  crash.rs  elf.rs  endian.rs  kfunc.rs  ktest.rs  math.rs  mod.rs  multiboot2.rs  mutex.rs  net.rs  process.rs  serial_kfunc.rs  types.rs  volatile.rs
tests/: Cargo.toml  basic_boot.rs  ext2_tests.rs  heap_allocation.rs  lib.rs  should_panic.rs  stack_overflow.rs  virt_addr.rs
tests/kernel_tests/: stack_overflow.rs
tests/src/: lib.rs
uefi/: NullexUefi.inf  UefiMain.c
uefi/OVMF/: OVMF_CODE.fd  OVMF_VARS.fd
(+100 files in other folders)
