[package]
name = "nullex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.14.2"
linked_list_allocator = "0.10.2"
hashbrown = { version = "0.15.2", features = ["inline-more"] }
futures = { version = "0.3", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
bitflags = "2.9.4"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"