[package]
name = "nullex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
x86_64 = { version = "0.14.2", features = ["instructions"] }
hashbrown = { version = "0.15.2", features = ["inline-more"] }
futures = { version = "0.3", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
smoltcp = { version = "0.13.0", default-features = false, features = ["proto-ipv4", "socket-tcp", "medium-ethernet", "alloc", "log"] }

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"

[features]
test = []
